@@ -41,7 +41,6 @@ LIBRPMDB_0
     _newmagic;
     prDbiOpenFlags;
     rdbOptions;
-    readLead;
     rpmDatabasePoptTable;
     rpmdbAdd;
     rpmdbAppendIterator;
@@ -74,12 +73,15 @@ LIBRPMDB_0
     rpmdbSync;
     rpmdbVerify;
     rpmdbVerifyAllDBI;
+    rpmpkgCheck;
+    rpmpkgRead;
+    rpmpkgSizeof;
+    rpmpkgWrite;
     rpm_mergesort;
     rpmTagTable;
     rpmTagTableSize;
     rpmTags;
     sqlitevec;
-    writeLead;
     XrpmdbLink;
     XrpmdbUnlink;
   local:
