@@ -15,9 +15,36 @@
 #include <rpmio.h>
 
 #include "signature.h"		/* XXX RPMSIGTYPE_HEADERSIG */
-#define	_RPMLEAD_INTERNAL
 #include <pkgio.h>
 #include "debug.h"
+
+#define	RPMLEAD_BINARY 0
+#define	RPMLEAD_SOURCE 1
+
+#define	RPMLEAD_MAGIC0 0xed
+#define	RPMLEAD_MAGIC1 0xab
+#define	RPMLEAD_MAGIC2 0xee
+#define	RPMLEAD_MAGIC3 0xdb
+
+#define	RPMLEAD_SIZE 96		/*!< Don't rely on sizeof(struct) */
+
+/** \ingroup lead
+ * The lead data structure.
+ * The lead needs to be 8 byte aligned.
+ * @deprecated The lead (except for signature_type) is legacy.
+ * @todo Don't use any information from lead.
+ */
+struct rpmlead {
+    unsigned char magic[4];
+    unsigned char major;
+    unsigned char minor;
+    short type;
+    short archnum;
+    char name[66];
+    short osnum;
+    short signature_type;	/*!< Signature header type (RPMSIG_HEADERSIG) */
+/*@unused@*/ char reserved[16];	/*!< Pad to 96 bytes -- 8 byte aligned! */
+} ;
 
 /*@unchecked@*/
 int _nolead = SUPPORT_RPMLEAD;
@@ -29,12 +56,31 @@ static unsigned char lead_magic[] = {
 
 /* The lead needs to be 8 byte aligned */
 
-rpmRC writeLead(FD_t fd, const struct rpmlead *lead)
+/**
+ * Write lead to file handle.
+ * @param fd		file handle
+ * @param ptr		package lead
+ * @param *msg		name to include in lead
+ * @return		RPMRC_OK on success, RPMRC_FAIL on error
+ */
+static rpmRC writeLead(FD_t fd, void * ptr, const char ** msg)
+	/*@globals fileSystem @*/
+	/*@modifies fd, fileSystem @*/
 {
     struct rpmlead l;
 
 /*@-boundswrite@*/
-    memcpy(&l, lead, sizeof(l));
+    memcpy(&l, ptr, sizeof(l));
+
+    /* Set some sane defaults */
+    if (l.major == 0)
+	l.major = 3;
+    if (l.type == 0)
+	l.type = RPMLEAD_BINARY;
+    if (l.signature_type == 0)
+	l.signature_type = RPMSIGTYPE_HEADERSIG;
+    if (msg && *msg)
+	(void) strncpy(l.name, *msg, sizeof(l.name));
     
     memcpy(&l.magic, lead_magic, sizeof(l.magic));
 /*@=boundswrite@*/
@@ -51,8 +97,17 @@ rpmRC writeLead(FD_t fd, const struct rpmlead *lead)
     return RPMRC_OK;
 }
 
-rpmRC readLead(FD_t fd, struct rpmlead ** leadp, const char ** msg)
+/**
+ * Read lead from file handle.
+ * @param fd		file handle
+ * @retval *ptr		package lead
+ * @retval *msg		failure msg
+ * @return		rpmRC return code
+ */
+static rpmRC readLead(FD_t fd, void * ptr, const char ** msg)
+	/*@modifies fd, *lead, *msg @*/
 {
+    struct rpmlead ** leadp = ptr;
     struct rpmlead * lead = xcalloc(1, sizeof(*lead));
     char buf[BUFSIZ];
     rpmRC rc = RPMRC_FAIL;		/* assume failure */
@@ -120,3 +175,40 @@ exit:
     }
     return rc;
 }
+
+size_t rpmpkgSizeof(const char * fn)
+{
+    size_t len = 0;
+    if (!strcmp(fn, "Lead"));
+	return sizeof(struct rpmlead);
+    return len;
+}
+
+rpmRC rpmpkgRead(const char * fn, FD_t fd, void * ptr, const char ** msg)
+{
+    rpmRC rc = RPMRC_FAIL;
+
+    if (!strcmp(fn, "Lead"))
+	return readLead(fd, ptr, msg);
+    return rc;
+}
+
+rpmRC rpmpkgWrite(const char * fn, FD_t fd, void * ptr, const char ** msg)
+{
+    rpmRC rc = RPMRC_FAIL;
+
+    if (!strcmp(fn, "Lead"))
+	return writeLead(fd, ptr, msg);
+    return rc;
+}
+
+#ifdef	NOTYET
+rpmRC rpmpkgCheck(const char * fn, FD_t fd, void * ptr, const char ** msg)
+{
+    rpmRC rc = RPMRC_FAIL;
+
+    if (!strcmp(fn, "Lead"))
+	return checkLead(fd, ptr, msg);
+    return rc;
+}
+#endif
